--- a/ZooManager/App.xaml
+++ b/ZooManager/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="ZooManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ZooManager">
+             xmlns:conv="clr-namespace:ZooManager.UI.Converters">
     <Application.Resources>
+        <conv:BoolToVisibilityConverter x:Key="BoolToVisibility"/>
         <!-- Colors -->
         <Color x:Key="Primary">#1E5631</Color>
         <Color x:Key="Accent">#4CAF50</Color>
