--- a/ZooManager/UI/Views/MainWindow.xaml
+++ b/ZooManager/UI/Views/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="ZooManager.UI.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    WindowState="Maximized">
+        WindowState="Maximized"
+        Icon="pack://application:,,,/UI/Assets/Logo.ico">
 
     <!-- ========== LAYOUT ========== -->
     <Grid>
